--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,13 +1,33 @@
-.main ul{
-    display:flex;
-    justify-content:center;
-    /* border: 1px solid black; */
-    list-style: none;
-}
-.main ul li{
-    /* border: 1px solid black; */
-    margin-left: 5px;
-    padding-right: 50px;
-    
-}
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem;
+    background-color: #302e2e;
+
+  }
+
+  header h1 {
+    font-size: 2rem;
+    margin-left: 2rem;
+    color: red;
+  }
+  
+  header nav ul {
+    display: flex;
+    list-style: none;
+  }
+  
+  header nav ul li {
+    margin-right: 4rem;
+  }
+  
+  header nav ul li:last-child {
+    margin-right: 2rem;
+  }
+  
+  header nav ul li a {
+    color: #fff;
+    text-decoration: none;
+  }
