--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,5 +1,4 @@
-
-header {
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -7,29 +6,89 @@ header {
     background-color: #302e2e;
    
   }
-
-   header h1 {
+  .header h1{
     font-size: 3rem;
-    margin-left: 4rem;
-    color: rgb(125, 117, 117);
+    margin-left: 6rem;
+    margin-top: 3rem;
+  }
 
+.lists{
+  display: flex;
+  list-style: none;
+}
+.header ul li{
+  margin-right: 3rem;
+  margin-top: 2rem;
+
+}
+.header ul li:last-child{
+  margin-right: 4rem;
+}
+
+
+.menutoggle {
+
+display: none;
+}
+
+
+.header ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+@media (max-width: 750px) {
+  .menu {
+      position: static;
+      flex-direction: row;
+      justify-content: flex-end;
+      background-color: transparent;
+      color: #333;
+      transform: translateY(0);
+    }
+    .header{
+      justify-content: flex-start;
   }
-  
-  header nav ul {
-    display: flex;
-    list-style: none;
-  }
-  
-  header nav ul li {
-    margin-right: 4rem;
-  }
-  
-  header nav ul li:last-child {
-    margin-right: 5rem;
-  }
-  
-  header nav ul li a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
+   
+    .lists{
+        display: none;
+    }
+    .listresponsive{
+      position: absolute;
+      display: block;
+      list-style: none;
+      width: 20%;
+      text-align: center;
+      top: 100px;
+      right: 0px;
+      color: gray;
+      background: rgb(77, 74, 74);
+    }
+    .listresponsive li{
+      padding-top: 10px;
+      font-size: 16px;
+      padding-bottom: 10px;
+      cursor: pointer;
+    }
+    .listresponsive li:hover{
+      color: black;
+    }
+    
+    .menutoggle{
+      display: block;
+      position: absolute;
+      color: gray;
+     
+      border: none;
+      outline: none;
+      right: 20px;
+     
+      height: 37px;
+      
+      font-size: 24px;
+      
+        
+    }
+   
+    
+    
+}
