--- a/src/Components/JoinUs/JoinUs.module.css
+++ b/src/Components/JoinUs/JoinUs.module.css
@@ -1,66 +1,69 @@
-.body {
+.container {
+    background-image: url(https://media.istockphoto.com/id/1213615970/photo/gym-background-fitness-weight-equipment-on-empty-dark-floor.jpg?s=612x612&w=0&k=20&c=WyPxLxpfd9Pi6l0BMyWsqrrZIi_SrMmgTtYn8k08qQI=);
+    background-size: cover;
     
+    background-color: rgb(80, 83, 84);
     
-  padding: 0;
-  height: 100vh;
-  background-image: url("https://media.istockphoto.com/id/1213615970/photo/gym-background-fitness-weight-equipment-on-empty-dark-floor.jpg?s=612x612&w=0&k=20&c=WyPxLxpfd9Pi6l0BMyWsqrrZIi_SrMmgTtYn8k08qQI=");
- 
+    margin: -1.5rem;
+    
 
-  background-size: cover;
-  background-position: center;
-}
-.container{
-    
-    
-  padding: 0;
-  height: 100vh;
-  margin-top: -2.5rem;
- 
-  background-size: cover;
-  background-position: center;
+   
 }
 
-
-    
 .details {
-
-    background-color: linear-gradient(to bottom right, red, yellow);
-    margin-top: 4rem;
+   
     min-height: 80vh;
-   margin: auto;
+    margin: 20px;
     border-radius: 10px;
     text-align: center;
-    justify-content: center;
 }
 
 .input {
-    background-color:grey;
+    background-color: 'transparent';
+    border: solid black;
     min-height: 50vh;
-    max-width: 20vw;
+    border-radius: 2rem;
+    max-width: 50%;
     margin: auto;
     text-align: center;
     padding: 15px;
-    border-radius: 20px;
-    margin-top: 4rem;
+    border-radius: 10px;
+    min-width: 30%;
+   
 
 }
 
 .data {
     margin: 30px;
     text-align: left;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: large;
+    font-weight: 500
 
 }
 
 label {
-    font-size: larger;
-    margin: 20px;
+    font-size: 1em;
+   
 }
 
 input {
     border-radius: 5px;
-    margin: 5px;
+   margin: 5px;
     padding: 5px;
-    width: 200px;
+   width: 50%;
+   max-height: 15px;
+
+    
+}
+@media only screen and (max-width:725px) {
+    .data{
+        display: flex;
+        text-align: left;
+        flex-direction: column;
+    }
 }
 
 button {
@@ -69,7 +72,6 @@ button {
     border-radius: 5px;
     margin: 10px;
     cursor: pointer;
-    margin-top: 3rem;
 }
 
 .home {
@@ -82,6 +84,15 @@ button {
 .link:hover {
     text-decoration: none;
 }
-.required{
-    color:red;
+h5{
+    cursor: pointer;
+}
+.warn{
+    color: red;
+}
+#fieldsWarn{
+    color: red;
+}
+.err{
+    color: red;
 }
