--- a/src/Components/Trainer/trainercard.module.css
+++ b/src/Components/Trainer/trainercard.module.css
@@ -1,25 +1,29 @@
-
 .card{
+   
+    border-radius: 1rem;
+    margin-top: 5px;
     overflow: hidden;
     box-shadow: 0 2px 20px gray;
-    background-color: rgb(207, 199, 215);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     cursor: pointer;
     transition:transform 200ms ease-in ;
+    background-color: rgb(217, 209, 209);
 }
-img{
+.imgtrainer{
+    margin:  1.5rem;
+    border-radius: 50%;
     height: 12rem;
     object-fit: cover;
-    width: 100%;  
-    border: #FF6263 solid 
+    width: 80%;  
+    
+    
     
 }
 .cardTitle{
-    padding: 1rem;
-    text-align: center;
-    
+ display: flex;
+ justify-content: center;
 }
 
 .card:hover{
