--- a/src/Components/Trainer/Trainer.css
+++ b/src/Components/Trainer/Trainer.css
@@ -1,14 +1,10 @@
-.main {
+
+.main{
   display: grid;
   grid-template-columns: repeat(auto-fit,minmax(12rem,16rem));
-  gap: 6rem;
+  gap: 15rem;
   justify-content: center;
-  background-image: url(https://img.freepik.com/free-photo/solid-painted-concrete-wall-textured-backdrop_53876-129479.jpg?w=740&t=st=1681982365~exp=1681982965~hmac=7e044d16b3bf141a8fdf74237f3b66cf10af40af75b09ed47947c5a40fa0ccbe);
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  margin-left: 2rem;
 }
-
-  
-  @media (max-width: 768px) {
-    .trainers-grid {
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    }
-  }
