--- a/src/Components/Classes/card.module.css
+++ b/src/Components/Classes/card.module.css
@@ -1,8 +1,8 @@
 
 .card{
-    overflow: hidden;
-    box-shadow: 0 2px 20px gray;
-    background-color: rgb(207, 199, 215);
+    
+    box-shadow: 0 2px 20px rgb(18, 3, 3);
+    background-color: rgb(96, 91, 91);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -17,16 +17,33 @@ img{
     
 }
 .cardTitle{
-    padding: 1rem;
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 20px;
+
+   
     
 }
+.cardBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: antiquewhite;
+    text-decoration: none;
+}
+.cardBtn h3 {
+    text-decoration: none;
+    color: #f5eaea;
+    justify-content: center;
+    text-align: center;
+    background-color: #FF6263;
+    padding: 10px;
+    border-radius: 10px;
+  }
 
 .card:hover{
     transform: scale(1.02);
     
 }
- .card.cardBtn:hover{
-    
-color: blue;
-}
+ 
