--- a/src/Components/Classes/classes.module.css
+++ b/src/Components/Classes/classes.module.css
@@ -8,5 +8,6 @@ body{
     justify-content: center;
     margin-top: 5rem;
     margin-bottom: 5rem;
-    margin-left: 2rem;
+    width: auto;
+    
 }
