--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -41,8 +41,8 @@
 }
 
 .text {
-  font-size: 1rem;
-  color: rgb(68, 16, 16);
+  font-size: 20px;
+  color: rgb(89, 9, 155);
   margin: 0 2rem 1rem;
   width: 50%;
 }
